{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 9,
  "lineage": "5762459d-3213-97df-7f5b-6a5c862b5c50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:internet-gateway/igw-068e17200c2627782",
            "id": "igw-068e17200c2627782",
            "owner_id": "150273023207",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "tags_all": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-0b0c6f0268034d7b3"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:route-table/rtb-08c6b46f9790a3dfa",
            "id": "rtb-08c6b46f9790a3dfa",
            "owner_id": "150273023207",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068e17200c2627782",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "tags_all": {
              "Name": "Terraform_Main_table-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0c6f0268034d7b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d8cc832cb915050",
            "route_table_id": "rtb-08c6b46f9790a3dfa",
            "subnet_id": "subnet-0e86cd094d4884675"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:security-group/sg-0b5effcb90828e00e",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5effcb90828e00e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "150273023207",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b0c6f0268034d7b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-0e86cd094d4884675",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e86cd094d4884675",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_Public_Subnet1-testing"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet1-testing"
            },
            "vpc_id": "vpc-0b0c6f0268034d7b3"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-08d7f6f832e0b1d3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d7f6f832e0b1d3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_Public_Subnet2-testing"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet2-testing"
            },
            "vpc_id": "vpc-0b0c6f0268034d7b3"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:subnet/subnet-03178212d5eb165f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03178212d5eb165f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "150273023207",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_Public_Subnet3-testing"
            },
            "tags_all": {
              "Name": "Terraform_Public_Subnet3-testing"
            },
            "vpc_id": "vpc-0b0c6f0268034d7b3"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:150273023207:vpc/vpc-0b0c6f0268034d7b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09a921f0ce30b5940",
            "default_route_table_id": "rtb-0193c327bb60a482e",
            "default_security_group_id": "sg-0187ee157c9fac324",
            "dhcp_options_id": "dopt-021f5ec2fa227cb1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b0c6f0268034d7b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0193c327bb60a482e",
            "owner_id": "150273023207",
            "tags": {
              "Name": "single-instance",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "prod"
            },
            "tags_all": {
              "Name": "single-instance",
              "Owner": "Sreeharsha Veerapalli",
              "environment": "prod"
            }
          }
        }
      ]
    }
  ]
}